[package]
name = "${REPO_NAME}"
version = "0.1.0"
edition = "2021"
description = "${REPO_DESCRIPTION}"
repository = "${REPO_HTTPS_URL}"
authors = ["${REPO_OWNER}"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
nursery = "warn"
