[package]
name = "repo_name"
version = "0.1.0"
edition = "2021"
description = "repo_description"
repository = "repo_url"
authors = ["author_name"]
license = "MIT OR Apache-2.0"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
nursery = { level = "warn", priority = -1 }
